--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/index.css" />
   <title>Portfolio Sergio Sosa Aparicio</title>
 </head>
 <body>
@@ -13,12 +13,20 @@
   <main>
     <div class="contenedor_principal">
       <div class="cabecera_usuario">
-        <a href="https://github.com/SergioSoAp" target="_blank" class="github"></a>
-        <a href="https://www.linkedin.com/in/sergio-sosa-aparicio-741583238/" target="_blank" class="linkedin"></a>
-        <a href="https://www.google.es/" target="_blank" class="gmail"></a>
-        <h1 class="mi_nombre">Sergio Sosa Aparicio</h1>
         <div class="img_cabecera">
           <div class="foto_perfil"></div>
+        </div>
+        <h1 class="mi_nombre">Sergio Sosa Aparicio</h1>
+        <div class="iconContainer">
+          <a href="https://github.com/SergioSoAp" target="_blank">
+            <img src="/img/icono github.png" class="iconoImagen" />
+          </a>
+          <a href="https://www.linkedin.com/in/sergio-sosa-aparicio-741583238/" target="_blank">
+            <img src="/img/icono Linkedin.png" class="iconoImagen" />
+          </a>
+          <a href="mailto:sosaapariciosergio@gmail.com" target="_blank">
+            <img src="/img/icono gmail.png" class="iconoImagen" />
+          </a>
         </div>
       </div>
       <div class="menu_botones">
